Fix self introduction brown header having 1px see through on Safari browser

--- a/src/Styles/Components/AboutMe/AboutMe.module.css
+++ b/src/Styles/Components/AboutMe/AboutMe.module.css
@@ -100,7 +100,8 @@
     position: sticky;
     display: flex;
     align-content: center;
-    top: 0;
+    /* -1px because Safari shows a sliver of background without it */
+    top: -1px;
     padding: 10px 0;
 }
 
